--- a/Contact.html
+++ b/Contact.html
@@ -2,29 +2,39 @@
   
 <html lang="en" dir="ltr">
 	
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- Style CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles1.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
-    <!-- End Style CSS -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="css/news.css">
-    <title>TOBICA - Trang Chủ</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
-    <link href="css/contact.css" rel="stylesheet" type="text/css">
-    <script src="js/home.js">
-    </script>
-    <script src="js/lazyload.min.js"></script>
-
-  </head>
+	<head>
+		<title>TOBICA - Trang Chủ</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		
+		<!-- Style CSS -->
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+		<link rel="stylesheet" href="css/styles1.css">
+		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		<link href="bootstrap/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/news.css">
+		<link rel="stylesheet" href="css/home.css">
+		<link href="css/contact.css" rel="stylesheet" type="text/css">
+		<!-- End Style CSS -->
+			
+		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		
+		<script src="js/jquery-3.3.1.min.js"></script>
+		<script src="js/home.js"></script>
+		<script src="js/lazyload.min.js"></script>
+		
+		<!-- From Hao -->
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+		<link rel="stylesheet" href="/resources/demos/style.css">
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script>
+			$( function() {
+			$( "#tabs" ).tabs();
+			} );
+		</script>
+	</head>
 	
   <body style="background:#F7F5F4;">
 	  
@@ -234,6 +244,23 @@
 					<div class="map">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8688.524106241062!2d105.78165320077578!3d21.02898912684822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abbfa96f309f%3A0x7917af0f83effe1b!2sFPT+University+Hanoi!5e0!3m2!1sen!2s!4v1549974983906" width="1108" height="100%" frameborder="1" style="border:0" allowfullscreen></iframe>
 					</div>
+				</div>
+				
+				<div id="tabs">
+				  <ul>
+					<li><a href="#tabs-1">Nunc tincidunt</a></li>
+					<li><a href="#tabs-2">Proin dolor</a></li>
+					<li><a href="#tabs-3">Aenean lacinia</a></li>
+				  </ul>
+				  <div id="tabs-1">
+					<p>Proin </p>
+				  </div>
+				  <div id="tabs-2">
+					<p>Morbi </p>
+				  </div>
+				  <div id="tabs-3">
+					<p>Mauris </p>
+				  </div>
 				</div>
 				
 			<!--End content-->
